✨ Added zed post

--- a/blog/2024-07-15-zed-introduction/index.mdx
+++ b/blog/2024-07-15-zed-introduction/index.mdx
@@ -7,6 +7,10 @@ tags: [programming, development]
 
 В постоянно развивающемся мире разработки программного обеспечения правильные инструменты могут значительно повлиять на продуктивность и качество кода. Один из таких инструментов, который привлекает внимание сообщества разработчиков, - это редактор Zed.
 
+<div class="text--center">
+![zed-img](./zed.png)
+</div>
+
 В этом посте мы рассмотрим, что делает Zed уникальным и почему вам стоит рассмотреть возможность его использования.
 
 ### Что такое редактор Zed?
